Add cli generator
